--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
 					<bootstrap-input [inputConfig]="emailConfig"></bootstrap-input>
 					<label>Currency</label>
 					<bootstrap-input [inputConfig]="currencyConfig"></bootstrap-input>
+					testing 123
 				</form>
 			</div>
 			<div class="card-footer text-center text-muted">powered by sir-captainmorgan21</div>
