--- a/projects/ng-bootstrap-input/src/lib/email/email.component.html
+++ b/projects/ng-bootstrap-input/src/lib/email/email.component.html
@@ -1,6 +1,6 @@
-<div class="form-group" [ngClass]="{'has-success':isValid(), 'has-danger':control.invalid}">
+<div class="form-group" [ngClass]="{'has-success':isValid(), 'has-danger':isInvalid()}">
 	<label>{{label}}</label>
-	<input type="text" class="form-control" [ngClass]="{'form-control-success':isValid(), 'form-control-danger':control.invalid}" id="{{controlName}}"
+	<input type="text" class="form-control" [ngClass]="{'form-control-success':isValid(), 'form-control-danger':isInvalid()}" id="{{controlName}}"
 		[formControl]="control">
 	<small class="form-control-feedback" *ngIf="hasError('required')">Required</small>
 	<small class="form-control-feedback" *ngIf="hasError('email') && !hasError('required')">Invalid Email</small>
