--- a/projects/ng-bootstrap-input/src/lib/phone/phone.component.html
+++ b/projects/ng-bootstrap-input/src/lib/phone/phone.component.html
@@ -2,5 +2,5 @@
     <label>{{label}}</label>
     <input type="text" [textMask]="maskConfig" class="form-control" [ngClass]="{'form-control-success':isValid(), 'form-control-danger':isInvalid()}" id="{{controlName}}"
       [formControl]="control">
-    <div class="form-control-feedback" *ngIf="hasError('required')">Required</div>
+    <small class="form-control-feedback" *ngIf="hasError('required')">Required</small>
 </div>
