--- a/projects/ng-bootstrap-input/src/lib/postal-code/postal-code.component.html
+++ b/projects/ng-bootstrap-input/src/lib/postal-code/postal-code.component.html
@@ -1,5 +1,5 @@
 <div class="form-group" [ngClass]="{'has-success':isValid(), 'has-danger':isInvalid()}">
     <input type="text" [textMask]="maskConfig" class="form-control" [ngClass]="{'form-control-success':isValid(), 'form-control-danger':isInvalid()}" id="{{controlName}}"
       [formControl]="control">
-    <div class="form-control-feedback" *ngIf="hasError('required')">Required</div>
+    <small class="form-control-feedback" *ngIf="hasError('required')">Required</small>
   </div>
