--- a/projects/ng-bootstrap-input/src/lib/password/password.component.html
+++ b/projects/ng-bootstrap-input/src/lib/password/password.component.html
@@ -1,6 +1,6 @@
-<div class="form-group" [class]="{'has-success':isValid(), 'has-danger':isInvalid()}">
+<div class="form-group" [ngClass]="{'has-success':isValid(), 'has-danger':isInvalid()}">
   <label>{{label}}</label>
-  <input type="password" class="form-control" [class]="{'form-control-success':isValid(), 'form-control-danger':isInvalid()}" id="{{controlName}}"
+  <input type="password" class="form-control" [ngClass]="{'form-control-success':isValid(), 'form-control-danger':isInvalid()}" id="{{controlName}}"
     [formControl]="control">
   <small class="form-control-feedback" *ngIf="hasError('required')">Required</small>
   <small class="form-control-feedback" *ngIf="hasError('maxlength')">Max {{maxLength}} characters</small>
