Added ability to provide custom regex error message

--- a/projects/ng-bootstrap-input/src/lib/password/password.component.html
+++ b/projects/ng-bootstrap-input/src/lib/password/password.component.html
@@ -5,5 +5,5 @@
   <small class="form-control-feedback" *ngIf="hasError('required')">Required</small>
   <small class="form-control-feedback" *ngIf="hasError('maxlength')">Max {{maxLength}} characters</small>
   <small class="form-control-feedback" *ngIf="hasError('minlength')">Min {{minLength}} characters</small>
-  <small class="form-control-feedback" *ngIf="hasError('pattern')">Invalid Format</small>
+  <small class="form-control-feedback" *ngIf="hasError('pattern')">{{regexErrorMsg}}</small>
 </div>
