--- a/projects/ng-bootstrap-input/src/lib/input/input.component.html
+++ b/projects/ng-bootstrap-input/src/lib/input/input.component.html
@@ -1,9 +1,9 @@
 <div class="form-group" [ngClass]="{'has-success':isValid(), 'has-danger':isInvalid()}">
-    <label>{{label}}</label>
-    <input type="text" [textMask]="maskConfig" class="form-control" [ngClass]="{'form-control-success':isValid(), 'form-control-danger':isInvalid()}" id="{{controlName}}"
-      [formControl]="control">
-    <small class="form-control-feedback" *ngIf="hasError('required')">Required</small>
-    <small class="form-control-feedback" *ngIf="hasError('pattern')">Invalid Format</small>
-    <small class="form-control-feedback" *ngIf="hasError('maxlength')">Max {{maxLength}} characters</small>
-    <small class="form-control-feedback" *ngIf="hasError('minlength')">Min {{minLength}} characters</small>
-  </div>
+  <label>{{label}}</label>
+  <input type="text" [textMask]="maskConfig" class="form-control" [ngClass]="{'form-control-success':isValid(), 'form-control-danger':isInvalid()}" id="{{controlName}}"
+    [formControl]="control">
+  <small class="form-control-feedback" *ngIf="hasError('required')">Required</small>
+  <small class="form-control-feedback" *ngIf="hasError('pattern')">{{regexErrorMsg}}</small>
+  <small class="form-control-feedback" *ngIf="hasError('maxlength')">Max {{maxLength}} characters</small>
+  <small class="form-control-feedback" *ngIf="hasError('minlength')">Min {{minLength}} characters</small>
+</div>
